--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,15 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.MainActivity"
-    android:background="@color/colorRed">
+    tools:context="app.capstoneproject.ui.LoginActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal|center_vertical"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="@dimen/splash_title_size"
-        android:text="@string/splash_title"
-        android:textColor="@color/colorWhite"/>
 </RelativeLayout>
