--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ui.MainActivity"
-    android:background="@color/colorRed">
+    android:background="@color/colorPrimaryLight">
 
     <TextView
         android:layout_width="match_parent"
