Forgot and SignUp(partial) Activity added.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -64,7 +64,8 @@
                     android:hint="@string/password"
                     android:inputType="textPassword"
                     android:textColor="@color/colorWhite"
-                    android:textColorHint="@color/colorWhite" />
+                    android:textColorHint="@color/colorWhite"
+                    />
 
             </android.support.design.widget.TextInputLayout>
 
