--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,13 +16,14 @@
     <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
     <color name="colorPrimaryBottom">#BA68C8</color>
+    <color name="event_list_background">#D8F79C</color>
 
-<!--
-    <color name="colorPrimary">#9C27B0</color>
-    <color name="colorPrimaryDark">#7B1FA2</color>
-        <color name="primary_light">#E1BEE7</color>
-    <color name="colorAccent">#009688</color>
+    <!--
+        <color name="colorPrimary">#9C27B0</color>
+        <color name="colorPrimaryDark">#7B1FA2</color>
+            <color name="primary_light">#E1BEE7</color>
+        <color name="colorAccent">#009688</color>
 
--->
+    -->
 
 </resources>
